--- a/public/css/starter-template.css
+++ b/public/css/starter-template.css
@@ -1,8 +1,9 @@
-body {
+/*body {
   	padding-top: 30px;
-}
+}*/
+
 .starter-template {
-  	padding: 40px 15px;
+  	padding: 70px;
   	text-align: center;
 }
 
